--- a/contact-us.html
+++ b/contact-us.html
@@ -5,152 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-        
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        body { 
+            font-family: Arial, sans-serif; 
+            background: linear-gradient(135deg, #2d6a4f, #582f0e); 
+            display:flex; justify-content:center; align-items:center; min-height:100vh; margin:0; 
         }
-        .container {
-            background: white;
-            padding: 40px 30px;
-            border-radius: 15px;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.1);
-            width: 100%;
-            max-width: 480px;
+        .box { 
+            background:white; padding:40px; border-radius:15px; width:90%; max-width:500px; 
+            box-shadow:0 10px 30px rgba(0,0,0,0.3); 
         }
-        h2 {
-            text-align: center;
-            margin-bottom: 30px;
-            color: #333;
+        input, textarea, button { 
+            width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; 
+            box-sizing:border-box; font-size:16px;
         }
-        .form-group {
-            margin-bottom: 20px;
+        button { 
+            background:#2d6a4f; color:white; font-size:18px; cursor:pointer; border:none; 
         }
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #555;
-            font-weight: 500;
+        button:hover { background:#40916c; }
+        .msg { 
+            padding:15px; margin:15px 0; border-radius:8px; display:none; text-align:center; font-weight:bold; 
         }
-        input, textarea {
-            width: 100%;
-            padding: 12px 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 16px;
-            transition: border 0.3s;
-        }
-        input:focus, textarea:focus {
-            outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102,126,234,0.1);
-        }
-        textarea {
-            resize: vertical;
-            min-height: 120px;
-        }
-        button {
-            width: 100%;
-            padding: 14px;
-            background: #667eea;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #5a6fd8;
-        }
-        .success, .error {
-            padding: 12px;
-            margin: 15px 0;
-            border-radius: 8px;
-            text-align: center;
-            display: none;
-        }
-        .success { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
-        .error   { background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+        .success { background:#d4edda; color:#155724; border:1px solid #c3e6cb; }
+        .error { background:#f8d7da; color:#721c24; border:1px solid #f5c6cb; }
+        h2 { text-align:center; color:#2d3748; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Contact Us</h2>
-        <div class="success" id="successMsg">Thank you! Your message has been sent.</div>
-        <div class="error" id="errorMsg"></div>
+<div class="box">
+    <h2>Contact Us</h2>
+    <div id="msg" class="msg"></div>
 
-        <form id="contactForm" action="send_mail.php" method="POST">
-            <div class="form-group">
-                <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
+    <!-- ==== WEB3FORMS ==== -->
+    <form action="https://api.web3forms.com/submit" method="POST" id="form">
 
-            <div class="form-group">
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
+        <!-- YOUR ACCESS KEY HERE (get free at https://web3forms.com) -->
+        <input type="hidden" name="access_key" value="e7caeb74-2bf2-4b5a-b57c-14ff16949fbd">
 
-            <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required>
-            </div>
+        <!-- Optional: Redirect after success -->
+        <!-- <input type="hidden" name="redirect" value="https://web3forms.com/success"> -->
 
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="tel" name="phone" placeholder="Phone (optional)">
+        <input type="text" name="subject" placeholder="Subject" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
 
-            <div class="form-group">
-                <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" required>
-            </div>
+        <!-- Optional: Bot protection (honeypot + reCAPTCHA v3 built-in) -->
+        <input type="checkbox" name="botcheck" class="hidden" style="display:none">
 
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
+        <button type="submit">Send Message</button>
+    </form>
+</div>
 
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
+<script>
+    const form = document.getElementById('form');
+    const result = document.getElementById('msg');
 
-    <script>
-        const form = document.getElementById('contactForm');
-        const successMsg = document.getElementById('successMsg');
-        const errorMsg = document.getElementById('errorMsg');
+    form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const btn = form.querySelector('button');
+        btn.disabled = true;
+        btn.textContent = "Sending...";
 
-        form.addEventListener('submit', async function(e) {
-            e.preventDefault();
+        const fd = new FormData(form);
 
-            const formData = new FormData(form);
-
-            try {
-                const response = await fetch('send_mail.php', {
-                    method: 'POST',
-                    body: formData
-                });
-
-                const result = await response.json();
-
-                if (result.status === 'success') {
-                    successMsg.style.display = 'block';
-                    errorMsg.style.display = 'none';
-                    form.reset();
-                } else {
-                    errorMsg.textContent = result.message;
-                    errorMsg.style.display = 'block';
-                    successMsg.style.display = 'none';
-                }
-            } catch (err) {
-                errorMsg.textContent = 'Something went wrong. Please try again later.';
-                errorMsg.style.display = 'block';
-            }
+        fetch('https://api.web3forms.com/submit', {
+            method: 'POST',
+            body: fd
+        })
+        .then(res => res.json())
+        .then(data => {
+            if (data.success) {
+                result.className = "msg success";
+                result.textContent = "Thank you! Your message was sent successfully.";
+                result.style.display = "block";
+                form.reset();
+            } else {
+                throw new Error(data.message);
+        })
+        .catch(err => {
+            result.className = "msg error";
+            result.textContent = err.message || "Something went wrong. Try again.";
+            result.style.display = "block";
+        })
+        .finally(() => {
+            btn.disabled = false;
+            btn.textContent = "Send Message";
         });
-    </script>
+    });
+</script>
 </body>
 </html>
