--- a/test.html
+++ b/test.html
@@ -211,7 +211,7 @@
         </div>
         <div class="details">
             <h2 class="trophy-name">ISL Cup</h2>
-            <div class="years">2022-23, 2024-205</div>
+            <div class="years">2022-23, 2024-25</div>
         </div>
     </div>
 
@@ -247,7 +247,7 @@
             <div class="count-label">Times</div>
         </div>
         <div class="details">
-            <h2 class="trophy-name">Rovers-Cup</h2>
+            <h2 class="trophy-name">Rovers Cup</h2>
             <div class="years">1955, 1966, 1968, 1970, 1971, 1972, 1976, 1977, 1981, 1985, 1988, 1991, 1992, 2000-21. </div>
         </div>
     </div>
@@ -479,3 +479,4 @@
 </div>
 </body>
 </html>
+
