--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
     <div class="top-bar">
         <span>FOLLOW US</span>
         <a href="https://www.facebook.com/share/17cesvqNoP/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/MarinersOnside" target="_blank"><i class="fab fa-x-twitter"></i></a>
+        <!--<a href="https://twitter.com/MarinersOnside" target="_blank"><i class="fab fa-x-twitter"></i></a>-->
         <a href="https://www.instagram.com/marinersonsideofficial?igsh=MW94ZW03cnVhMnRzbA==" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/@MarinersOnside" target="_blank"><i class="fab fa-youtube"></i></a>
-        <a href="https://t.me/MarinersOnside" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-        <a href="https://whatsapp.com/channel/0029VbAaRygGpLHRbx1Oov06" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <!--<a href="https://www.youtube.com/@MarinersOnside" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://t.me/MarinersOnside" target="_blank"><i class="fab fa-telegram-plane"></i></a>-->
+        <a href="https://whatsapp.com/channel/0029VbAaRygGpLHRbx1Oov06 " target="_blank"><i class="fab fa-whatsapp"></i></a>
     </div>
 
     <!-- HEADER -->
@@ -208,6 +208,18 @@
             <div class="dropdown-content">
                 <a href="player.html">PLAYERS MEET-UP</a>
                 <a href="social-work.html">SOCIAL WORK</a>
+            </div>
+        </div>
+
+        <!-- STRATEGIC ADMIN PANEL Dropdown -->
+        <div class="dropdown">
+            <a href="#" class="dropdown-toggle">
+                ADMIN PANEL <i class="fas fa-caret-down"></i>
+            </a>
+            <div class="dropdown-content">
+                <a href="core.html">CORE TEAM</a>
+                <a href="media.html">MEDIA TEAM</a>
+                <a href="field.html">FIELD TEAM</a>
             </div>
         </div>
 
@@ -276,4 +288,3 @@
     </script>
 </body>
 </html>
-
