--- a/field.html
+++ b/field.html
@@ -153,7 +153,7 @@
       },
       {
         name: "Anindya Bhattacharjee",
-        position: "Core Committee Member",
+        position: "Field Assistant",
         photo: "pk11.jpg",
         bio: "Annindya Bhattacharjee serves as a field assistant."
       },
@@ -183,4 +183,5 @@
   </script>
 
 </body>
+
 </html>
