--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         <a href="gallery.html">MINDFRAMES</a>
         <a href="test.html">TROPHY ROOM</a>
-        <a href="store.html">STORE</a>
+        <a href="coming.html">STORE</a>
     </nav>
 
     <!-- HERO SECTION -->
@@ -288,3 +288,4 @@
     </script>
 </body>
 </html>
+
