--- a/coming.html
+++ b/coming.html
@@ -330,7 +330,7 @@
         <p>We're preparing something extraordinary for our passionate supporters. Stay tuned!</p>
     </section>
 
-    <!-- COUNTDOWN -->
+    <!-- COUNTDOWN 
     <section class="countdown-section">
         <h2 class="countdown-title">Launch Countdown</h2>
         <div class="countdown" id="countdown">
@@ -351,7 +351,7 @@
                 <span class="label">Seconds</span>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- FEATURES -->
     <section class="features-section">
@@ -421,4 +421,5 @@
         }
     </script>
 </body>
+
 </html>
