--- a/coming.html
+++ b/coming.html
@@ -300,11 +300,11 @@
     <div class="top-bar">
         <span>FOLLOW US</span>
         <a href="https://www.facebook.com/share/17cesvqNoP/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/MarinersOnside" target="_blank" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
+        <!--<a href="https://twitter.com/MarinersOnside" target="_blank" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>-->
         <a href="https://www.instagram.com/marinersonsideofficial" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/@MarinersOnside" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-        <a href="https://t.me/MarinersOnside" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
-        <a href="https://discord.gg/marinersonside" target="_blank" aria-label="Discord"><i class="fab fa-discord"></i></a>
+        <!--<a href="https://www.youtube.com/@MarinersOnside" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+        <a href="https://t.me/MarinersOnside" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>-->
+        <a href="https://whatsapp.com/channel/0029VbAaRygGpLHRbx1Oov06" target="_blank" aria-label="Discord"><i class="fab fa-whatsapp"></i></a>
     </div>
 
     <!-- HEADER -->
@@ -423,3 +423,4 @@
 </body>
 
 </html>
+
