--- a/field.html
+++ b/field.html
@@ -146,7 +146,7 @@
         bio: "Argho Dutta serves as the Field assistant."
       },
       {
-        name: "Sourav Mazundar",
+        name: "Sourav Mazumdar",
         position: "Field Assistant",
         photo: "jm1.jpg",
         bio: "Argho Dutta serves as the Field assistant."
@@ -185,3 +185,4 @@
 </body>
 
 </html>
+
