--- a/media.html
+++ b/media.html
@@ -135,7 +135,7 @@
         bio: "Proudly fueling the Mariners Onside community as an Admin. I handle the digital content and step behind the camera to photograph our programs, keeping the spirit alive online and offline."
       },
       {
-        name: "Jimmy",
+        name: "Sourav Mazumdar",
         position: "Instagram Admin",
         photo: "jm1.jpg",
         bio: "Meet Jimmy, the creative force behind the Mariner’s Onside Instagram. From curating daily posts to editing engaging videos, he works behind the scenes to bring our community the best visual content."
@@ -213,3 +213,4 @@
 </body>
 
 </html>
+
