--- a/player.html
+++ b/player.html
@@ -160,19 +160,9 @@
     <h1 class="main-title">MARINERS ONSIDE PLAYERS MEET UP</h1>
     <h3 class="subtitle">"MARINERS ONSIDE PLAYERS MEET UP:-
 
-Mariners OnSide Football Fiesta 1.0 was a dynamic celebration of sport, spirit, and 
-solidarity. Bringing together players, supporters, and community members, the event 
-showcased our shared passion for Mohun Bagan and the beautiful game. It marked 
-the beginning of a new chapter where football, fandom, and fellowship came together 
-under one banner.Mariners OnSide Football Fiesta 1.0 wasn’t just a tournament — it was
-an emotion. A day where the Green & Maroon family played, cheered, connected, 
-and celebrated the essence of being a Mariner. Every kick, every chant, every smile 
-reflected the unity and pride that define our community.Mariners OnSide Football 
-Fiesta 1.0 brought the heat! Passionate matches, electrifying energy, loud chants, 
-and non-stop excitement turned the ground into a festival of football and fandom. 
-A true showcase of what Mariners can create when we come together.Mariners OnSide 
-Football Fiesta 1.0 united fans through football, fun, and fellowship — a perfect 
-blend of competition and community spirit."</h3>
+Mariners Onside Players Meetup:-
+
+The Mariners OnSide Players’ Meet-Up with Mohun Bagan players was a truly special and unforgettable moment for every green-and-maroon heart. It wasn’t just a meeting, but a celebration of shared passion, respect, and legacy. Seeing the players interact with the Mariners OnSide community created an atmosphere filled with pride, warmth, and inspiration. Conversations, smiles, and memories flowed freely, strengthening the bond between the club and its supporters. Moments like these remind us that Mohun Bagan is more than a football team — it is a family where players and fans stand together, onside, always. 💚❤️"</h3>
 
     <div class="gallery-grid">
 
@@ -239,4 +229,5 @@ blend of competition and community spirit."</h3>
     });
   </script>
 </body>
+
 </html>
