--- a/social-work.html
+++ b/social-work.html
@@ -158,21 +158,9 @@
 
   <section class="gallery-section">
     <h1 class="main-title">MARINERS ONSIDE SOCIAL WORK</h1>
-    <h3 class="subtitle">"MARINERS ONSIDE PLAYERS MEET UP:-
+    <h3 class="subtitle">"MARINERS SOCIAL WORK:-
 
-Mariners OnSide Football Fiesta 1.0 was a dynamic celebration of sport, spirit, and 
-solidarity. Bringing together players, supporters, and community members, the event 
-showcased our shared passion for Mohun Bagan and the beautiful game. It marked 
-the beginning of a new chapter where football, fandom, and fellowship came together 
-under one banner.Mariners OnSide Football Fiesta 1.0 wasn’t just a tournament — it was
-an emotion. A day where the Green & Maroon family played, cheered, connected, 
-and celebrated the essence of being a Mariner. Every kick, every chant, every smile 
-reflected the unity and pride that define our community.Mariners OnSide Football 
-Fiesta 1.0 brought the heat! Passionate matches, electrifying energy, loud chants, 
-and non-stop excitement turned the ground into a festival of football and fandom. 
-A true showcase of what Mariners can create when we come together.Mariners OnSide 
-Football Fiesta 1.0 united fans through football, fun, and fellowship — a perfect 
-blend of competition and community spirit."</h3>
+The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. At a time when many families were struggling with loss and uncertainty, the Mariners Onside community stepped forward to provide relief and hope. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming the belief that humanity stands above all. This initiative reflected the true spirit of Mariners Onside — not limited to football or fandom, but rooted in empathy, responsibility, and standing beside people in their toughest moments."</h3>
 
     <div class="gallery-grid">
 
@@ -187,6 +175,12 @@ blend of competition and community spirit."</h3>
       <div class="gallery-item">
         <img src="s3.jpg" alt="Mariners Onside Fiesta 1.0">
       </div>
+
+      <h1 class="main-title">MARINERS ONSIDE SOCIAL WORK</h1>
+    <h3 class="subtitle">"MARINERS BLOOD DONATION-
+
+The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. At a time when many families were struggling with loss and uncertainty, the Mariners Onside community stepped forward to provide relief and hope. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming the belief that humanity stands above all. This initiative reflected the true spirit of Mariners Onside — not limited to football or fandom, but rooted in empathy, responsibility, and standing beside people in their toughest moments."</h3>
+
 
       <div class="gallery-item">
         <img src="s4.jpg" alt="Mariners Onside Fiesta 1.0">
@@ -250,4 +244,5 @@ blend of competition and community spirit."</h3>
     });
   </script>
 </body>
+
 </html>
