--- a/player.html
+++ b/player.html
@@ -158,7 +158,7 @@
 
   <section class="gallery-section">
     <h1 class="main-title">MARINERS ONSIDE PLAYERS MEET UP</h1>
-    <h3 class="subtitle">"MARINERS ONSIDE PLAYERS MEET UP:-
+    <h3 class="subtitle">"
 
 The Mariners Onside Players’ Meet-Up with Mohun Bagan players was a truly special and unforgettable moment for every green-and-maroon heart. It wasn’t just a meeting, but a celebration of shared passion, respect, and legacy. Seeing the players interact with the Mariners Onside community created an atmosphere filled with pride, warmth, and inspiration. Conversations, smiles, and memories flowed freely, strengthening the bond between the club and its supporters. Moments like these remind us that Mohun Bagan is more than a football team — it is a family where players and fans stand together, onside, always. "</h3>
     <div class="gallery-grid">
@@ -228,5 +228,6 @@ The Mariners Onside Players’ Meet-Up with Mohun Bagan players was a truly spec
 </body>
 
 </html>
+
 
 
