--- a/agm.html
+++ b/agm.html
@@ -115,7 +115,7 @@
   <section class="gallery-section">
     <h1 class="main-title">MARINERS ONSIDE FIESTA 1.0</h1>
     <h3 class="subtitle">
-Mariners OnSide Fiesta 1.0 marked a vibrant celebration of passion, pride, and unity. 
+"Mariners OnSide Fiesta 1.0 marked a vibrant celebration of passion, pride, and unity. 
 It brought together Mariners from every corner, turning shared love for Mohun Bagan 
 into an unforgettable festival of colours, emotions, and community spirit. 
 It wasn’t just an event — it was the beginning of a tradition that celebrates who we are, 
@@ -388,4 +388,5 @@ the tone for many more iconic gatherings ahead."</h3>
   </script>
 </body>
 </html>
+
 
