--- a/social-work.html
+++ b/social-work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MARINERS ONSIDE FIESTA 1.0</title>
+  <title>MARINERS ONSIDE SOCIAL WORK</title>
   <style>
     body {
       margin: 0;
@@ -16,7 +16,7 @@
     .gallery-section {
       max-width: 1400px;
       margin: 0 auto;
-      padding: 100px 20px 120px;
+      padding: 80px 20px 120px;
     }
 
     .main-title {
@@ -48,6 +48,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 28px;
+      margin-bottom: 100px;
     }
 
     .gallery-item {
@@ -157,61 +158,49 @@
 <body>
 
   <section class="gallery-section">
-    <h1 class="main-title">MARINERS ONSIDE SOCIAL WORK</h1>
-    <h3 class="subtitle">"MARINERS SOCIAL WORK:-
-
-The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. At a time when many families were struggling with loss and uncertainty, the Mariners Onside community stepped forward to provide relief and hope. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming the belief that humanity stands above all. This initiative reflected the true spirit of Mariners Onside — not limited to football or fandom, but rooted in empathy, responsibility, and standing beside people in their toughest moments."</h3>
+    <!-- Flood Relief Section -->
+    <h1 class="main-title">FLOOD RELIEF - KHANAKUL</h1>
+    <h3 class="subtitle">The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming that humanity stands above all.</h3>
 
     <div class="gallery-grid">
-
       <div class="gallery-item">
-        <img src="s1.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s1.jpg" alt="Flood Relief Khanakul">
       </div>
-
       <div class="gallery-item">
-        <img src="s2.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s2.jpg" alt="Flood Relief Khanakul">
       </div>
-
       <div class="gallery-item">
-        <img src="s3.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s3.jpg" alt="Flood Relief Khanakul">
       </div>
+    </div>
 
-      <h1 class="main-title">MARINERS ONSIDE SOCIAL WORK</h1>
-    <h3 class="subtitle">"MARINERS BLOOD DONATION-
-
-The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. At a time when many families were struggling with loss and uncertainty, the Mariners Onside community stepped forward to provide relief and hope. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming the belief that humanity stands above all. This initiative reflected the true spirit of Mariners Onside — not limited to football or fandom, but rooted in empathy, responsibility, and standing beside people in their toughest moments."</h3>
-
-
+    <!-- Blood Donation Section -->
+    <h1 class="main-title">BLOOD DONATION</h1>
+    <h3 class="subtitle">Mariners Onside Blood Donation Camp was a meaningful initiative driven by compassion, responsibility, and community spirit. Organized with the belief that true support goes beyond the stands, the camp aimed to give back to society by helping those in need of life-saving blood. Members and well-wishers came forward wholeheartedly, turning solidarity into action and passion into purpose. The initiative highlighted Mariners Onside’s commitment to social responsibility, proving that being a supporter is not only about cheering for the team, but also about standing together for humanity. Through this noble effort, Mariners Onside once again showed that the green-and-maroon spirit beats strongest when it serves others.</h3>
+    <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="s4.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s4.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s5.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s5.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s6.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s6.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s7.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s7.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s8.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s8.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s9.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s9.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s10.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s10.jpg" alt="Blood Donation">
       </div>
-
       <div class="gallery-item">
-        <img src="s11.jpg" alt="Mariners Onside Fiesta 1.0">
+        <img src="s11.jpg" alt="Blood Donation">
       </div>
     </div>
   </section>
@@ -238,11 +227,9 @@ The people of Mariners Onside came together in a powerful display of unity and c
       lightbox.classList.remove('active');
     });
 
-    // Close lightbox with Escape key
     document.addEventListener('keydown', (e) => {
       if (e.key === 'Escape') lightbox.classList.remove('active');
     });
   </script>
 </body>
-
 </html>
