--- a/social-work.html
+++ b/social-work.html
@@ -160,7 +160,7 @@
   <section class="gallery-section">
     <!-- Flood Relief Section -->
     <h1 class="main-title">FLOOD RELIEF - KHANAKUL</h1>
-    <h3 class="subtitle">The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming that humanity stands above all.</h3>
+    <h3 class="subtitle">"The people of Mariners Onside came together in a powerful display of unity and compassion to support the flood-affected residents of Khanakul. At a time when many families were struggling with loss and uncertainty, the Mariners Onside community stepped forward to provide relief and hope. Through collective effort and selfless dedication, essential supplies and support were extended to those in need, reaffirming the belief that humanity stands above all. This initiative reflected the true spirit of Mariners Onside — not limited to football or fandom, but rooted in empathy, responsibility, and standing beside people in their toughest moments."</h3>
 
     <div class="gallery-grid">
       <div class="gallery-item">
