--- a/football.html
+++ b/football.html
@@ -158,9 +158,9 @@
 
   <section class="gallery-section">
     <h1 class="main-title">MARINERS ONSIDE FOOTBALL FIESTA 1.0</h1>
-    <h3 class="subtitle">"MARINERS ONSIDE FOOTBALL FIESTA 1.0:-
+    <h3 class="subtitle">
 
-Mariners OnSide Football Fiesta 1.0 was a dynamic celebration of sport, spirit, and 
+"Mariners OnSide Football Fiesta 1.0 was a dynamic celebration of sport, spirit, and 
 solidarity. Bringing together players, supporters, and community members, the event 
 showcased our shared passion for Mohun Bagan and the beautiful game. It marked 
 the beginning of a new chapter where football, fandom, and fellowship came together 
@@ -341,3 +341,4 @@ blend of competition and community spirit."</h3>
   </script>
 </body>
 </html>
+
