--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
       text-align: center;
       font-size: 3.5rem;
       margin: 60px 20px 10px;
-      color: white;           /* White heading */
+      color: green;           /* White heading */
       text-shadow: 0 4px 10px rgba(0,0,0,0.4);
     }
 
@@ -106,7 +106,7 @@
       </div>
       <div class="zigzag-text">
         <h2>Tribute to Ratan Tata Sir In Vybk</h2>
-        <p>The day everything changed. Those tiny shoes on the wooden floor still bring tears of joy.</p>
+        <p>The tribute to Ratan Tata Sir at Vivekananda Yuba Bharati Krirangan was a heartfelt moment of respect and gratitude for a visionary who shaped modern India with integrity, compassion, and purpose. In the presence of thousands, the tribute honoured not just an industrial leader, but a humanitarian whose values extended far beyond business. The atmosphere reflected deep admiration for his commitment to nation-building, ethical leadership, and social responsibility. Paying homage at such an iconic venue symbolised how Ratan Tata Sir’s legacy resonates across generations, inspiring people to lead with humility, courage, and care for society at large.</p>
       </div>
     </div>
 
@@ -117,7 +117,7 @@
       </div>
       <div class="zigzag-text">
         <h2>Mariners On Ahal Match</h2>
-        <p>Under the old oak tree, surrounded by everyone we love. The best yes of our lives.</p>
+        <p>Mariners Onside standing in front of the iconic Sailboat tifo during the Ahal match was a moment that perfectly captured the pride, passion, and identity of the green-and-maroon faithful. As the magnificent tifo unfurled across the stands, symbolising Mohun Bagan’s rich heritage and fearless journey, Mariners Onside stood united, representing unwavering support and loyalty. The sight reflected the powerful bond between the club and its supporters, where history, emotion, and matchday energy came together as one. Moments like these turn a football match into a timeless memory, reminding everyone that Mariners Onside will always stand tall, onside, with Mohun Bagan..</p>
       </div>
     </div>
 
@@ -128,7 +128,7 @@
       </div>
       <div class="zigzag-text">
         <h2>We are together</h2>
-        <p>Endless laughter, sandy toes, and the sound of waves — pure happiness captured forever.</p>
+        <p>Mariners Onside – We Are Together is more than just a line; it is the spirit that defines our community. It represents unity beyond differences, strength in togetherness, and an unbreakable bond rooted in love for Mohun Bagan. Whether in celebration or challenge, on matchdays or in moments of social responsibility, Mariners Onside stands as one family, supporting each other with pride and purpose. This togetherness is our identity — voices united, hearts aligned, and everyone always standing onside for the club and for one another.</p>
       </div>
     </div>
 
@@ -138,7 +138,7 @@
       </div>
       <div class="zigzag-text">
         <h2>We are together</h2>
-        <p>Endless laughter, sandy toes, and the sound of waves — pure happiness captured forever.</p>
+        <p>Mariners Onside at Kalinga Stadium was a proud and powerful representation of the green-and-maroon spirit beyond home soil. Carrying passion across miles, the Mariners Onside family made their presence felt with unwavering energy, chants, and unity, turning the stands into a reflection of home. Their support echoed throughout the stadium, standing firmly behind the team from kickoff to the final whistle. Moments like these highlight that Mariners Onside is not limited by geography — wherever Mohun Bagan plays, its people follow, united, loyal, and always onside.</p>
       </div>
     </div>
 
@@ -148,7 +148,7 @@
       </div>
       <div class="zigzag-text">
         <h2>We are together</h2>
-        <p>Endless laughter, sandy toes, and the sound of waves — pure happiness captured forever.</p>
+        <p>Mariners Onside Away Match Hunt represents the fearless passion of supporters who go the extra mile to stand beside their club, no matter the distance. It is about travelling together, planning, and turning every away game into a home-like atmosphere through chants, colours, and unity. Each away match hunt reflects commitment, brotherhood, and the determination to support Mohun Bagan beyond familiar grounds. These journeys build memories, strengthen bonds, and showcase that Mariners Onside is not just a supporters’ group, but a family that follows the club everywhere — always together, always onside.</p>
       </div>
     </div>
 
@@ -158,7 +158,7 @@
       </div>
       <div class="zigzag-text">
         <h2>We are together</h2>
-        <p>Endless laughter, sandy toes, and the sound of waves — pure happiness captured forever.</p>
+        <p>Mariners Onside Away Match Hunt represents the fearless passion of supporters who go the extra mile to stand beside their club, no matter the distance. It is about travelling together, planning, and turning every away game into a home-like atmosphere through chants, colours, and unity. Each away match hunt reflects commitment, brotherhood, and the determination to support Mohun Bagan beyond familiar grounds. These journeys build memories, strengthen bonds, and showcase that Mariners Onside is not just a supporters’ group, but a family that follows the club everywhere — always together, always onside..</p>
       </div>
     </div>
 
@@ -286,4 +286,5 @@
 
 </body>
 </html>
+
 
